parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LINE
    LIST
    MEAN
    RESHAPE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> expresasign
Rule 3     statement -> expression_numpy
Rule 4     statement -> TAB PRINT LPAREN STR COMA expression RPAREN
Rule 5     statement -> PRINT LPAREN STR COMA expression RPAREN
Rule 6     statement -> PRINT LPAREN expression RPAREN
Rule 7     statement -> TAB PRINT LPAREN expression RPAREN
Rule 8     statement -> PRINT
Rule 9     statement -> PRINT expression
Rule 10    statement -> PRINT LPAREN expression
Rule 11    statement -> PRINT LPAREN
Rule 12    statement -> PRINT TAB expression
Rule 13    expresasign -> NAME EQUALS expression
Rule 14    expresasign -> NAME EQUALS expression_numpy
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression TIMES expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression POTENCY expression
Rule 20    expression -> expression DIVIDE_INT expression
Rule 21    condition -> expression DIGUAL expression
Rule 22    condition -> expression DIFERENTE expression
Rule 23    condition -> expression MAYORQUE expression
Rule 24    condition -> expression MENORQUE expression
Rule 25    condition -> condition TAB AND TAB condition
Rule 26    condition -> condition TAB OR TAB condition
Rule 27    statement -> IF LPAREN condition RPAREN DOSPUNTOS
Rule 28    statement -> IF LPAREN condition RPAREN
Rule 29    statement -> IF TAB condition DOSPUNTOS
Rule 30    statement -> IF LPAREN condition
Rule 31    statement -> IF LPAREN
Rule 32    statement -> IF LPAREN expression
Rule 33    statement -> IF LPAREN condition DOSPUNTOS
Rule 34    where -> LPAREN condition_where COMA NAME COMA expression RPAREN
Rule 35    condition_where -> NAME MENORQUE NUMBER
Rule 36    condition_where -> NAME MAYORQUE NUMBER
Rule 37    condition_where -> NAME DIGUAL NUMBER
Rule 38    statement -> ELSE DOSPUNTOS
Rule 39    statement -> ELSE
Rule 40    expression_numpy -> NUMPY POINT numpyfunc
Rule 41    numpyfunc -> ARRAY array
Rule 42    numpyfunc -> ARANGE arange
Rule 43    numpyfunc -> ARANGE arange_error
Rule 44    numpyfunc -> ARRAY array_error
Rule 45    numpyfunc -> ARGMAX argmax
Rule 46    numpyfunc -> ARGMAX argmax_error
Rule 47    numpyfunc -> ARGMIN argmin
Rule 48    numpyfunc -> ARGMIN argmin_error
Rule 49    numpyfunc -> SUM sum
Rule 50    numpyfunc -> SUM sum_error
Rule 51    numpyfunc -> WHERE where
Rule 52    array -> LPAREN NAME RPAREN
Rule 53    array -> LPAREN NUMBER RPAREN
Rule 54    array -> LPAREN expression RPAREN
Rule 55    array_error -> LPAREN STR RPAREN
Rule 56    arange -> LPAREN NUMBER RPAREN
Rule 57    arange -> LPAREN NAME RPAREN
Rule 58    arange_error -> LPAREN STR RPAREN
Rule 59    argmin -> LPAREN NAME RPAREN
Rule 60    argmin -> LPAREN expression RPAREN
Rule 61    argmax -> LPAREN NAME RPAREN
Rule 62    argmax -> LPAREN expression RPAREN
Rule 63    argmin_error -> LPAREN STR RPAREN
Rule 64    argmax_error -> LPAREN STR RPAREN
Rule 65    sum -> LPAREN NAME RPAREN
Rule 66    sum -> LPAREN expression RPAREN
Rule 67    sum_error -> LPAREN STR RPAREN
Rule 68    expression -> MINUS expression
Rule 69    expression -> NUMBER
Rule 70    expression -> STR
Rule 71    expression -> LCORCHETE expression_list RCORCHETE
Rule 72    expression -> LCORCHETE RCORCHETE
Rule 73    expression -> list_error
Rule 74    list_error -> LCORCHETE expression_list
Rule 75    list_error -> LCORCHETE expression_list COMA
Rule 76    expression_list -> expression COMA expression_list
Rule 77    expression_list -> expression
Rule 78    expression -> LPAREN expression RPAREN
Rule 79    expression -> NAME

Terminals, with rules where they appear

AND                  : 25
ARANGE               : 42 43
ARGMAX               : 45 46
ARGMIN               : 47 48
ARRAY                : 41 44
COMA                 : 4 5 34 34 75 76
DIFERENTE            : 22
DIGUAL               : 21 37
DIVIDE               : 18
DIVIDE_INT           : 20
DOSPUNTOS            : 27 29 33 38
ELSE                 : 38 39
EQUALS               : 13 14
IF                   : 27 28 29 30 31 32 33
LCORCHETE            : 71 72 74 75
LINE                 : 
LIST                 : 
LPAREN               : 4 5 6 7 10 11 27 28 30 31 32 33 34 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 78
MAYORQUE             : 23 36
MEAN                 : 
MENORQUE             : 24 35
MINUS                : 16 68
NAME                 : 13 14 34 35 36 37 52 57 59 61 65 79
NUMBER               : 35 36 37 53 56 69
NUMPY                : 40
OR                   : 26
PLUS                 : 15
POINT                : 40
POTENCY              : 19
PRINT                : 4 5 6 7 8 9 10 11 12
RCORCHETE            : 71 72
RESHAPE              : 
RPAREN               : 4 5 6 7 27 28 34 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 78
STR                  : 4 5 55 58 63 64 67 70
SUM                  : 49 50
TAB                  : 4 7 12 25 25 26 26 29
TIMES                : 17
WHERE                : 51
error                : 

Nonterminals, with rules where they appear

arange               : 42
arange_error         : 43
argmax               : 45
argmax_error         : 46
argmin               : 47
argmin_error         : 48
array                : 41
array_error          : 44
condition            : 25 25 26 26 27 28 29 30 33
condition_where      : 34
expresasign          : 2
expression           : 1 4 5 6 7 9 10 12 13 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 32 34 54 60 62 66 68 76 77 78
expression_list      : 71 74 75 76
expression_numpy     : 3 14
list_error           : 73
numpyfunc            : 40
statement            : 0
sum                  : 49
sum_error            : 50
where                : 51

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . expresasign
    (3) statement -> . expression_numpy
    (4) statement -> . TAB PRINT LPAREN STR COMA expression RPAREN
    (5) statement -> . PRINT LPAREN STR COMA expression RPAREN
    (6) statement -> . PRINT LPAREN expression RPAREN
    (7) statement -> . TAB PRINT LPAREN expression RPAREN
    (8) statement -> . PRINT
    (9) statement -> . PRINT expression
    (10) statement -> . PRINT LPAREN expression
    (11) statement -> . PRINT LPAREN
    (12) statement -> . PRINT TAB expression
    (27) statement -> . IF LPAREN condition RPAREN DOSPUNTOS
    (28) statement -> . IF LPAREN condition RPAREN
    (29) statement -> . IF TAB condition DOSPUNTOS
    (30) statement -> . IF LPAREN condition
    (31) statement -> . IF LPAREN
    (32) statement -> . IF LPAREN expression
    (33) statement -> . IF LPAREN condition DOSPUNTOS
    (38) statement -> . ELSE DOSPUNTOS
    (39) statement -> . ELSE
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (13) expresasign -> . NAME EQUALS expression
    (14) expresasign -> . NAME EQUALS expression_numpy
    (40) expression_numpy -> . NUMPY POINT numpyfunc
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    TAB             shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 15
    NUMPY           shift and go to state 16

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    expresasign                    shift and go to state 3
    expression_numpy               shift and go to state 4
    list_error                     shift and go to state 14

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . POTENCY expression
    (20) expression -> expression . DIVIDE_INT expression

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    POTENCY         shift and go to state 21
    DIVIDE_INT      shift and go to state 22


state 3

    (2) statement -> expresasign .

    $end            reduce using rule 2 (statement -> expresasign .)


state 4

    (3) statement -> expression_numpy .

    $end            reduce using rule 3 (statement -> expression_numpy .)


state 5

    (4) statement -> TAB . PRINT LPAREN STR COMA expression RPAREN
    (7) statement -> TAB . PRINT LPAREN expression RPAREN

    PRINT           shift and go to state 23


state 6

    (5) statement -> PRINT . LPAREN STR COMA expression RPAREN
    (6) statement -> PRINT . LPAREN expression RPAREN
    (8) statement -> PRINT .
    (9) statement -> PRINT . expression
    (10) statement -> PRINT . LPAREN expression
    (11) statement -> PRINT . LPAREN
    (12) statement -> PRINT . TAB expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    LPAREN          shift and go to state 24
    $end            reduce using rule 8 (statement -> PRINT .)
    TAB             shift and go to state 26
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    NAME            shift and go to state 27

    expression                     shift and go to state 25
    list_error                     shift and go to state 14

state 7

    (78) expression -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 28
    list_error                     shift and go to state 14

state 8

    (70) expression -> STR .

    PLUS            reduce using rule 70 (expression -> STR .)
    MINUS           reduce using rule 70 (expression -> STR .)
    TIMES           reduce using rule 70 (expression -> STR .)
    DIVIDE          reduce using rule 70 (expression -> STR .)
    POTENCY         reduce using rule 70 (expression -> STR .)
    DIVIDE_INT      reduce using rule 70 (expression -> STR .)
    $end            reduce using rule 70 (expression -> STR .)
    RPAREN          reduce using rule 70 (expression -> STR .)
    COMA            reduce using rule 70 (expression -> STR .)
    RCORCHETE       reduce using rule 70 (expression -> STR .)
    DIGUAL          reduce using rule 70 (expression -> STR .)
    DIFERENTE       reduce using rule 70 (expression -> STR .)
    MAYORQUE        reduce using rule 70 (expression -> STR .)
    MENORQUE        reduce using rule 70 (expression -> STR .)
    DOSPUNTOS       reduce using rule 70 (expression -> STR .)
    TAB             reduce using rule 70 (expression -> STR .)


state 9

    (27) statement -> IF . LPAREN condition RPAREN DOSPUNTOS
    (28) statement -> IF . LPAREN condition RPAREN
    (29) statement -> IF . TAB condition DOSPUNTOS
    (30) statement -> IF . LPAREN condition
    (31) statement -> IF . LPAREN
    (32) statement -> IF . LPAREN expression
    (33) statement -> IF . LPAREN condition DOSPUNTOS

    LPAREN          shift and go to state 29
    TAB             shift and go to state 30


state 10

    (38) statement -> ELSE . DOSPUNTOS
    (39) statement -> ELSE .

    DOSPUNTOS       shift and go to state 31
    $end            reduce using rule 39 (statement -> ELSE .)


state 11

    (68) expression -> MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 32
    list_error                     shift and go to state 14

state 12

    (69) expression -> NUMBER .

    PLUS            reduce using rule 69 (expression -> NUMBER .)
    MINUS           reduce using rule 69 (expression -> NUMBER .)
    TIMES           reduce using rule 69 (expression -> NUMBER .)
    DIVIDE          reduce using rule 69 (expression -> NUMBER .)
    POTENCY         reduce using rule 69 (expression -> NUMBER .)
    DIVIDE_INT      reduce using rule 69 (expression -> NUMBER .)
    $end            reduce using rule 69 (expression -> NUMBER .)
    RPAREN          reduce using rule 69 (expression -> NUMBER .)
    COMA            reduce using rule 69 (expression -> NUMBER .)
    RCORCHETE       reduce using rule 69 (expression -> NUMBER .)
    DIGUAL          reduce using rule 69 (expression -> NUMBER .)
    DIFERENTE       reduce using rule 69 (expression -> NUMBER .)
    MAYORQUE        reduce using rule 69 (expression -> NUMBER .)
    MENORQUE        reduce using rule 69 (expression -> NUMBER .)
    DOSPUNTOS       reduce using rule 69 (expression -> NUMBER .)
    TAB             reduce using rule 69 (expression -> NUMBER .)


state 13

    (71) expression -> LCORCHETE . expression_list RCORCHETE
    (72) expression -> LCORCHETE . RCORCHETE
    (74) list_error -> LCORCHETE . expression_list
    (75) list_error -> LCORCHETE . expression_list COMA
    (76) expression_list -> . expression COMA expression_list
    (77) expression_list -> . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    RCORCHETE       shift and go to state 34
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression_list                shift and go to state 33
    expression                     shift and go to state 35
    list_error                     shift and go to state 14

state 14

    (73) expression -> list_error .

    PLUS            reduce using rule 73 (expression -> list_error .)
    MINUS           reduce using rule 73 (expression -> list_error .)
    TIMES           reduce using rule 73 (expression -> list_error .)
    DIVIDE          reduce using rule 73 (expression -> list_error .)
    POTENCY         reduce using rule 73 (expression -> list_error .)
    DIVIDE_INT      reduce using rule 73 (expression -> list_error .)
    $end            reduce using rule 73 (expression -> list_error .)
    RPAREN          reduce using rule 73 (expression -> list_error .)
    COMA            reduce using rule 73 (expression -> list_error .)
    RCORCHETE       reduce using rule 73 (expression -> list_error .)
    DIGUAL          reduce using rule 73 (expression -> list_error .)
    DIFERENTE       reduce using rule 73 (expression -> list_error .)
    MAYORQUE        reduce using rule 73 (expression -> list_error .)
    MENORQUE        reduce using rule 73 (expression -> list_error .)
    DOSPUNTOS       reduce using rule 73 (expression -> list_error .)
    TAB             reduce using rule 73 (expression -> list_error .)


state 15

    (79) expression -> NAME .
    (13) expresasign -> NAME . EQUALS expression
    (14) expresasign -> NAME . EQUALS expression_numpy

    PLUS            reduce using rule 79 (expression -> NAME .)
    MINUS           reduce using rule 79 (expression -> NAME .)
    TIMES           reduce using rule 79 (expression -> NAME .)
    DIVIDE          reduce using rule 79 (expression -> NAME .)
    POTENCY         reduce using rule 79 (expression -> NAME .)
    DIVIDE_INT      reduce using rule 79 (expression -> NAME .)
    $end            reduce using rule 79 (expression -> NAME .)
    EQUALS          shift and go to state 36


state 16

    (40) expression_numpy -> NUMPY . POINT numpyfunc

    POINT           shift and go to state 37


state 17

    (15) expression -> expression PLUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 38
    list_error                     shift and go to state 14

state 18

    (16) expression -> expression MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 39
    list_error                     shift and go to state 14

state 19

    (17) expression -> expression TIMES . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 40
    list_error                     shift and go to state 14

state 20

    (18) expression -> expression DIVIDE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 41
    list_error                     shift and go to state 14

state 21

    (19) expression -> expression POTENCY . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 42
    list_error                     shift and go to state 14

state 22

    (20) expression -> expression DIVIDE_INT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 43
    list_error                     shift and go to state 14

state 23

    (4) statement -> TAB PRINT . LPAREN STR COMA expression RPAREN
    (7) statement -> TAB PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 44


state 24

    (5) statement -> PRINT LPAREN . STR COMA expression RPAREN
    (6) statement -> PRINT LPAREN . expression RPAREN
    (10) statement -> PRINT LPAREN . expression
    (11) statement -> PRINT LPAREN .
    (78) expression -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    STR             shift and go to state 45
    $end            reduce using rule 11 (statement -> PRINT LPAREN .)
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 46
    list_error                     shift and go to state 14

state 25

    (9) statement -> PRINT expression .
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . POTENCY expression
    (20) expression -> expression . DIVIDE_INT expression

    $end            reduce using rule 9 (statement -> PRINT expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    POTENCY         shift and go to state 21
    DIVIDE_INT      shift and go to state 22


state 26

    (12) statement -> PRINT TAB . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    expression                     shift and go to state 47
    list_error                     shift and go to state 14

state 27

    (79) expression -> NAME .

    PLUS            reduce using rule 79 (expression -> NAME .)
    MINUS           reduce using rule 79 (expression -> NAME .)
    TIMES           reduce using rule 79 (expression -> NAME .)
    DIVIDE          reduce using rule 79 (expression -> NAME .)
    POTENCY         reduce using rule 79 (expression -> NAME .)
    DIVIDE_INT      reduce using rule 79 (expression -> NAME .)
    $end            reduce using rule 79 (expression -> NAME .)
    RPAREN          reduce using rule 79 (expression -> NAME .)
    COMA            reduce using rule 79 (expression -> NAME .)
    RCORCHETE       reduce using rule 79 (expression -> NAME .)
    DIGUAL          reduce using rule 79 (expression -> NAME .)
    DIFERENTE       reduce using rule 79 (expression -> NAME .)
    MAYORQUE        reduce using rule 79 (expression -> NAME .)
    MENORQUE        reduce using rule 79 (expression -> NAME .)
    DOSPUNTOS       reduce using rule 79 (expression -> NAME .)
    TAB             reduce using rule 79 (expression -> NAME .)


state 28

    (78) expression -> LPAREN expression . RPAREN
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . POTENCY expression
    (20) expression -> expression . DIVIDE_INT expression

    RPAREN          shift and go to state 48
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    POTENCY         shift and go to state 21
    DIVIDE_INT      shift and go to state 22


state 29

    (27) statement -> IF LPAREN . condition RPAREN DOSPUNTOS
    (28) statement -> IF LPAREN . condition RPAREN
    (30) statement -> IF LPAREN . condition
    (31) statement -> IF LPAREN .
    (32) statement -> IF LPAREN . expression
    (33) statement -> IF LPAREN . condition DOSPUNTOS
    (21) condition -> . expression DIGUAL expression
    (22) condition -> . expression DIFERENTE expression
    (23) condition -> . expression MAYORQUE expression
    (24) condition -> . expression MENORQUE expression
    (25) condition -> . condition TAB AND TAB condition
    (26) condition -> . condition TAB OR TAB condition
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    $end            reduce using rule 31 (statement -> IF LPAREN .)
    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    condition                      shift and go to state 49
    expression                     shift and go to state 50
    list_error                     shift and go to state 14

state 30

    (29) statement -> IF TAB . condition DOSPUNTOS
    (21) condition -> . expression DIGUAL expression
    (22) condition -> . expression DIFERENTE expression
    (23) condition -> . expression MAYORQUE expression
    (24) condition -> . expression MENORQUE expression
    (25) condition -> . condition TAB AND TAB condition
    (26) condition -> . condition TAB OR TAB condition
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression POTENCY expression
    (20) expression -> . expression DIVIDE_INT expression
    (68) expression -> . MINUS expression
    (69) expression -> . NUMBER
    (70) expression -> . STR
    (71) expression -> . LCORCHETE expression_list RCORCHETE
    (72) expression -> . LCORCHETE RCORCHETE
    (73) expression -> . list_error
    (78) expression -> . LPAREN expression RPAREN
    (79) expression -> . NAME
    (74) list_error -> . LCORCHETE expression_list
    (75) list_error -> . LCORCHETE expression_list COMA

    MINUS           shift and go to state 11
    NUMBER          shift and go to state 12
    STR             shift and go to state 8
    LCORCHETE       shift and go to state 13
    LPAREN          shift and go to state 7
    NAME            shift and go to state 27

    condition                      shift and go to state 51
    expression                     shift and go to state 52
